edits to chapter 2

--- a/chap2.tex
+++ b/chap2.tex
@@ -11,17 +11,6 @@
 
 
 
-
-
-2)Other problems:
-
---Mapping and route issues
----Google car needs detailed 3D maps in order to operate (1 p)
-
-
----also rain, snow, weather (1 p)
-
-
 >traffic-light detection and problems of infrastructure??
 
 
@@ -33,8 +22,20 @@ different than what we usually mean when we use that term
 --so does knowing this reality change what we want to see? (couple of
 p)
 
-The stakes of autonomous vehicles are deeply intertwined with the
-stakes of other networked technologies. In May of 2014, the European
+We find ourselves in an era of seemingly continual technological
+change that is strangely most noticeable in the most mundane parts of
+our lives---how we shop, how we communicate, how we find
+partners---almost as if ``designed by a bored researcher who kept one
+thumb permanently on the fast-forward button''\cite[p.
+  7]{???-Neuromancer1984}. No longer does the future seem to be
+defined by flying cars and jetpacks. Instead, it is defined by
+information, and its collection and use. The stakes of autonomous
+vehicles are thereby deeply intertwined with the
+stakes of other networked information technologies. And it is in these
+current models that we should start the search for why competing
+narratives of self-driving car development matter.
+
+ In May of 2014, the European
 Union's Court of Justice 
 ruled in the landmark Costeja decision that since Google is processing
 ``personal data,'' and acting as a ``data controller,'' it may be
@@ -46,12 +47,23 @@ information online.\cite{???} There is growing recognition that publicly
 available data can be highly sensitive and that it may be beneficial
 to allow individuals certain legal rights to control their own
 electronic reputations, at least in particular circumstances. Costeja
-opens the floodgates—from previously limited, targeted removals
-through court cases and copyright law—to the possibility of free and
-open public removal of ``public'' information. But much of our
+opens the floodgates---from previously limited, targeted removals
+through court cases and copyright law---to the possibility of free and
+open public removal of ``public'' information.\footnote{This removal,
+  however, is controlled and curated by Google itself, which has not
+  waited for guidance on how to proceed but has forged forward on its
+  own, as a way to set the standards by which information removal can
+  be justified.\cite{???-http://www.theguardian.com/technology/2015/feb/18/the-right-be-forgotten-google-search}} But much of our
 information is even harder to control.
 
-All over data-driven business models\footnote{??? cite Google, other examples}, increases in
+Many current data-driven business models\footnote{See for example
+  Google, which has as its fundamental revenue stream proceeds from
+  advertising, which is sold by virtue of it being more accurate or
+  targeted than other channels can provide. Facebook's new ad network
+  competes in a similar space. Many of these companies provide
+  services for ``free,'' where in reality the services are paid for by
+the user in the data they generate and/or the advertisements they
+view.} are fundamentally united in that increases in
 functionality are predicated on invasions of or encroachments on what
 we used to think was private, and represent increasingly invasive data
 collection and sharing at a massive scale---often this information is
@@ -62,16 +74,25 @@ is particularly important as a precursor of things to
 come in the autonomous vehicle space, as such vehicles will allow
 large amounts of data to be collected and shared with other entities. 
 
-The paradox of information technologies that these cases dramatize is
-of the utmost importance as computing technologies move deeper into
-everyday devices. What is sensed, and what can be appropriately
+
+\subsection{Data Gathering and Monitoring} 
+
+Clearly, new technologies will require new information, new types of
+sensing, in order to operate; but it may be that not all the
+information that is collected should be shared outside the immediate
+context of its use. What is sensed, and what can be appropriately
 transmitted back to servers for processing and storage, is of
 paramount importance: this is a question of privacy in context.\cite{???}
 Following Nissenbaum, privacy must always be seen in the context of
 particular users and a particular use.\cite{???} It is not that data about our
-commuting routes should never be collected, but that collected data
+commuting routes, for example, should never be collected, but that collected data
 should not be sent uncritically to any third party without our
-knowledge or consent, a violation of our information norms.\cite{???} There
+knowledge or consent, a violation of our information norms.\cite{???} 
+Automated vehicles are and will continue to be networked
+technologies. This connectedness brings with it great possibilities
+for coordinating traffic and improving city planning, as well as great
+risks to privacy and security, whether devices are networked with each
+other or simply connected to central servers. There
 may be legitimate uses for certain types of sensitive information, but
 while providing it to municipal governments specifically to assist in
 city planning may be legitimate, selling it to advertisers to help
@@ -86,13 +107,6 @@ about their passengers.
 %% and opens the way to more information about the passengers (2 p)
 %% --see Google's patents in particular which talk about sensing things
 %% like the number of passengers (4 p)
-\subsection{Data Gathering and Monitoring} 
-
-Autonomous vehicles are and will continue to be networked
-technologies. This connectedness brings with it great possibilities
-for coordinating traffic and improving city planning, as well as great
-risks to privacy and security, whether devices are networked with each
-other or simply connected to central servers. 
 
 With what networks, and for what reasons, will autonomous vehicles be
 connected? Current driverless car concepts depend on networked
@@ -139,7 +153,11 @@ fraction of the data that would be available through a self-driving
 vehicle, has agreed to share its ride data with municipalities for purposes of
 city planning.\cite{uberJardin} Though this data is ostesibly being
 shared for the public good, it also serves private ends: to curry favor with
-authorities that might otherwise attempt to shut the service down.
+authorities that might otherwise attempt to shut the service down. The
+ride data can also be used to provide internal predictions to help
+Uber increase revenue by directing drivers to the right locations at
+the right times. And it would not be far-fetched, in the current
+information landscape, to see such information sold to third-party advertisers.
 
 Google has envisioned vehicles that can determine their number of
 occupants, and use facial-recognition or other biometric systems to
@@ -160,9 +178,9 @@ require these vehicles to have unprecedented levels of very sensitive
 knowledge about people and their lives: biometrics, criminal
 histories, family and trust networks. 
 
-Data ideology tells us that we can understand ourselves better through
+Prevailing data ideology tells us that we can understand ourselves better through
 these data, that we can use them to determine patterns we never knew were
-there. Out of this ideology come publications like Uber's blog, which
+there. Out of this ideology come publications like Uber's blog\footnote{???}, which
 describes customer ``insights'' gained through their ride data, which
 are ostensibly interesting to the public. ``Look here,'' they seem to
 say, ``we can tell you about \emph{you}.'' But it important to
@@ -175,13 +193,17 @@ resist erosions of privacy and data protection stand to open our lives
 to greater scrutiny in terms of the means of and reasons for our
 personal mobility.
 
+%%More on the problems of data ideology? or not the place for it?
+
 
 \subsection{Maps and Mapping}
 
-Other types of data collection are also implicated in the current
-vision of the driverless car project. In order to drive with us,
+But the information that may be collected and processed by automated
+vehicles is not only about human inhabitants of the environment: other
+types of data collection are also implicated in current
+visions of the driverless car project. In order to drive with us,
 autonomous systems will have to understand,
-for at least a practical sense of “understanding,” traffic rules and
+for at least a practical sense of ``understanding,'' traffic rules and
 their accompanying signs, signals, lanes, and customs. This is, at its
 core, a highly complex problem of interpretation and representation
 for machines. Human understanding is built
@@ -192,28 +214,70 @@ this luxury in training machines.
 
 Localization has been a fundamental issue for robotics since the
 beginning of the field. In order to figure out how to act, a robot
-needs to know where it is. Returning to the history of AI,
-localization was part of the problem with the poor performance of the
-robot Shakey: world modeling through a symbolic approach was slow.\cite{???}
+needs to know where it is; and in general, robotic environments can be
+expected to change rapidly with motion, and to vary significantly from
+place-to-place\cite[p. 4]{???-SLAMbook}. Motions cannot, for the most part,
+be pre-planned:  they must continually be reevaluated in new and
+emerging situations, as the robot moves through the environment. As a
+key part of this puzzle the robot must be able to determine its own
+relationship to some target location it needs to get to: this
+``target-robot relation'' is an ``unavoidable''\footnote{It is
+  possible to create robots that navigate without any modeling of the
+environment, as Fern\'{a}ndez-Madrigal et al. point out. However, this
+severely limits the range of behavior that is possible. Without
+reference to the environment, errors slowly accrue, and a system that
+navigates in a known space without localization will find itself
+getting further and further off-track.} component of successful
+navigation.\cite[p. 5]{???-SLAMbook} This relation can be expressed
+in different forms---either quantitative representations such as maps,
+or logical, prepositional statements---and these representations carry
+their own techniques of interpretation. 
+
+But there is more to navigation than pure localization. While
+localization is the usage of known elements in the environment to
+estimate a robot's position, those elements themselves must be known
+in order to perform this process. Mapping is the complementary
+process, the estimation of ``\emph{unknown} spatial relations that
+exist between environment elements'' in order to allow for subsequent
+navigation\cite[p. 5]{???-SLAMbook}. There is a somewhat tricky
+precedence problem we face here:  in order to build maps with
+autonomous systems, they must know where they are; in order to know
+where they are, they must have maps with which to measure
+against.\cite[p. 6]{???-SLAMbook}
+
+Returning to the history of AI,
+localization was part of the cause of the poor performance of the
+robot Shakey: world modeling through a symbolic approach was slow,
+which was rendered even more problematic by the relative lack of
+computing power.\cite{???-mccorduck?}
 Though one way to determine robot position in the world is through
-simultaneous localization and mapping---a serious research area in
+simultaneous localization and mapping (SLAM)---a serious research area in
 robotics, as it is ideal for areas that are impractical to map
-beforehand\cite{???}---it is easier to localize by comparing
-measurements to a known map. The subsumption architecture involved an
+beforehand, such as ones that are always changing---it is easier to localize by comparing
+measurements to a known map. However, that implies that the map is
+pre-made, and therefore sets limits on the rate at which the
+environment can change and still allow the robot to operate. By
+contrast, the subsumption architecture involved an
 attempt to avoid the localization problem by pure sensory response to
 the environment, but building a robot that exhibits complex and
 predictable behaviors in complex environments, through this approach,
 is exceedingly difficult, as evidenced by Brooks's shift to hybrid
 modeling approaches. But new AI techniques do allow researchers to
-take advantage of new kinds of data.\cite{???}
+take advantage of new kinds of data.\cite{???} Today, localization and
+mapping are both considered ``satisfactorily solved in practical
+situations''---though SLAM techniques
+are still somewhat less reliable or developed---given sufficient
+computational resources and environmental data.\cite[p.
+  5-6]{???-SLAMbook}
 
-<Find background on localization and mapping> <Comments about history of
-localization, connect to the AI discussion,
-going back to Shakey etc>
+%%Fernández-Madrigal, Juan-Antonio, and José Luis Blanco Claraco.
+%%2013. Simultaneous Localization and Mapping for Mobile Robots :
+%%Introduction and Methods. Hershey, Pa: IGI Global, 2013. eBook
+%%Collection (EBSCOhost), EBSCOhost (accessed February 21, 2015).
 
 Here, the connections of autonomous systems to information networks
 again become important. The vehicles in the
-DARPA Grand Challenge did not navigate “on their own”: they used GPS
+DARPA Grand Challenge did not navigate ``on their own'': they used GPS
 to follow a path laid out for them in advance, using their autonomy
 only to avoid obstacles like rocks and ruts.\footnote{John Leonard,
   discussion with the author, December 3, 2014} And though successful
@@ -520,7 +584,7 @@ Nevertheless, machines manage to do things that seem “intelligent.” So
 though these terms are heuristics for understanding the observed
 behaviors of machines, they slip slowly over time from self-conscious
 scare-quoted use into casually accepted statements. While automatic
-translation may seem ``intelligent,'' or a system that can define \emph{\'\{e}toile}
+translation may seem ``intelligent,'' or a system that can define \emph{\'{e}toile}
 as ``star'' may seem to possess ``knowledge,'' this intelligence or
 knowledge is perhaps very different than our own. A deep
 epistemological question presents itself: how do we know, and how do
@@ -616,7 +680,7 @@ invisible---and actually has important implications for human-computer
 interaction, as we will see in the next section. Though it may seem
 obvious, it is critical to remember that the devices we discuss here may
 have the properties Lenat mentions only in the way that the University
-of T\"\{u}bingen's AI Mario may be
+of T\"{u}bingen's AI Mario may be
 ``self-aware,'' possessing programmed constraints that cause it to
 avoid people, and perhaps expect children to behave erratically.
 Nonetheless, despite lacking the facilities for actual ethics, these
