--- a/intro.tex
+++ b/intro.tex
@@ -71,6 +71,11 @@ ceding their driving agency to a computer system.\cite{clytton}
 
 
 
+---The future doesn't look like we think it does, pull material from
+CMS801 final paper! 
+
+
+
 3) and shift to the lead-in to the main thesis sections: 
 KEY QUESTIONS: What are the stories we are hearing vs. Other ones out
 there, why? and what are the stakes for these stories?
