first draft of chapter 2 complete

--- a/chap3.tex
+++ b/chap3.tex
@@ -30,6 +30,8 @@ automation.\cite{???}
 
 As a way to INTRODUCE HSC, actually
 
+NRC report on aviation (see e.g. 14-15)
+
 \subsection{Lessons from Autonomy Research}
 
 Apollo/Mars rover
