--- a/concl.tex
+++ b/concl.tex
@@ -97,6 +97,9 @@ philosophy. The real question we need to ask is what form the tech
 should take, and what benefits and acceptable sacrifices adhere to
 that choice.
 
+(Evan, on Hippocratic oath: why is it ``do no harm'' not ``save more
+lives''?
+there may be hidden consequences to a philosophy of saving more lives)
 
 
 EDIT THE BELOW
