--- a/main.bib
+++ b/main.bib
@@ -168,16 +168,6 @@
    year = "2004",
 }
 
-@INCOLLECTION{patricklin,
-   author = "Patrick Lin",
-   title = "{I}ntroduction",
-   editor = "Patrick Lin and Keith Abney and George A. Bekey",
-   booktitle = "{R}obot {E}thics: {T}he {E}thical and {S}ocial {I}mplications of {R}obotics",
-   publisher = "MIT Press",
-   address = "Cambridge, MA",
-   year = 2012,
-}
-
 @BOOK{shelley,
    author = "Mary Shelley",
    title = "{F}rankenstein; or, {T}he {M}odern {P}rometheus",
@@ -272,6 +262,24 @@
    month = "November 17",
    year = 2014,
    note = "http://www.nytimes.com/2014/11/18/science/researchers-announce-breakthrough-in-content-recognition-software.html?\_r=0",
+}
+
+@ARTICLE{gomesCircles,
+   author = "Lee Gomes",
+   title = "{D}riving in {C}ircles: {T}he autonomous {G}oogle car may never actually happen",
+   journal = {Slate},
+   month = "October 27",
+   year = 2014,
+   note = "http://www.slate.com/articles/technology/technology/2014/10/google_self_driving_car_it_may_never_actually_happen.single.html",
+}
+
+@ARTICLE{gomesObstacles,
+   author = "Lee Gomes",
+   title = "{H}idden {O}bstacles for {G}oogle's {S}elf-{D}riving {C}ars",
+   journal = {MIT Technology Review},
+   month = "August 28",
+   year = 2014,
+   note = "http://www.technologyreview.com/news/530276/hidden-obstacles-for-googles-self-driving-cars/",
 }
 
 @ARTICLE{gomesJordan,
@@ -469,6 +477,24 @@
    note = "http://bgr.com/2014/03/14/bill-gates-interview-robots/",
 }
 
+@ARTICLE{jessicaDavies,
+   author = "Jessica Davies",
+   title = "{P}hilosopher tackles issue of whether driverless cars make ethical judgments",
+   journal = "The Drum",
+   month = "February 21",
+   year = "2015",
+   note = "http://m.thedrum.com/news/2015/02/21/philosopher-tackles-issue-whether-driverless-cars-make-ethical-judgements-0",
+}
+
+@ARTICLE{timeEthics,
+   author = "Jared Newman",
+   title = "{H}ow to {M}ake {D}riverless {C}ars {B}ehave",
+   journal = "Time",
+   month = "June 6",
+   year = "2014",
+   note = "http://time.com/2837472/driverless-cars-ethics-morality/",
+}
+
 @ARTICLE{pewPositive,
    author = "Aaron Smith and Janna Anderson",
    title = "{V}iews from {T}hose {W}ho {E}xpect {AI} and {R}obotics to {H}ave a {P}ositive or {N}eutral {I}mpact on {J}obs by 2025",
@@ -622,7 +648,21 @@
    year = 2007,
 }
 
+@INCOLLECTION{patricklin,
+   crossref = "robotEthics",
+   author = "Patrick Lin",
+   title = "{I}ntroduction",
+   pages = "3--15",
+}
 
+@BOOK{robotEthics,
+   editor = "Patrick Lin and Keith Abney and George A. Bekey",
+   booktitle = "{R}obot {E}thics: {T}he {E}thical and {S}ocial {I}mplications of {R}obotics",
+   title = "{R}obot {E}thics: {T}he {E}thical and {S}ocial {I}mplications of {R}obotics",
+   publisher = "MIT Press",
+   address = "Cambridge, MA",
+   year = 2012,
+}
 
 
 
