--- a/chap2.tex
+++ b/chap2.tex
@@ -1,26 +1,26 @@
 \chapter{The Stakes of our Stories}
 \label{chap:3}
 
-3. Stakes of stories/tech (swap 4?)
--data collection
--mapping
--ML/machine vision
--functionalism vs. Understanding
--statistics and risk
--planning, policy, cities
+%% 3. Stakes of stories/tech (swap 4?)
+%% -data collection
+%% -mapping
+%% -ML/machine vision
+%% -functionalism vs. Understanding
+%% -statistics and risk
+%% -planning, policy, cities
 
 
 
->traffic-light detection and problems of infrastructure??
+%% >traffic-light detection and problems of infrastructure??
 
 
-2.5??) Worth bringing in questions of terminology, ``intelligence''
-etc. and the necessary caution in ascribing them to tech; we can look
-and see that the ``intelligence'' in action here is really very
-different than what we usually mean when we use that term
-(human-centric)
---so does knowing this reality change what we want to see? (couple of
-p)
+%% 2.5??) Worth bringing in questions of terminology, ``intelligence''
+%% etc. and the necessary caution in ascribing them to tech; we can look
+%% and see that the ``intelligence'' in action here is really very
+%% different than what we usually mean when we use that term
+%% (human-centric)
+%% --so does knowing this reality change what we want to see? (couple of
+%% p)
 
 We find ourselves in an era of seemingly continual technological
 change that is strangely most noticeable in the most mundane parts of
@@ -98,7 +98,7 @@ while providing it to municipal governments specifically to assist in
 city planning may be legitimate, selling it to advertisers to help
 them design more effective billboards may not be. Privacy issues
 involving motor vehicles are likely to become much more complicated as
-vehicles become able to record more, and potentially “know” more,
+vehicles become able to record more, and potentially ``know'' more,
 about their passengers.
 
 
@@ -114,7 +114,7 @@ information for vehicle guidance. While, historically, certain
 guidance systems have been insulated from communications---inertial
 guidance systems for intercontinental ballistic
 missiles are a particular example of this,\cite{mackenzie}---and
-Google's vehicles use inertial navigation devices\cite{knightfurther}
+Google's vehicles use inertial navigation devices\cite{knightFurther}
 alongside other sources of position data, current navigation systems
 depend on global positioning satellites. Google's approach to
 driverless car development currently necessitates accurate
@@ -159,9 +159,53 @@ Uber increase revenue by directing drivers to the right locations at
 the right times. And it would not be far-fetched, in the current
 information landscape, to see such information sold to third-party advertisers.
 
-% consider 1-2 sentences on risks of connected devices; http://blog.kaspersky.com/internet-of-crappy-things/
+% consider 1-2 sentences on risks of connected devices;
+% http://blog.kaspersky.com/internet-of-crappy-things/
 
-Google has envisioned vehicles that can determine their number of
+These sorts of security and privacy issues are not unique to
+autonomous vehicles, nor even to networked vehicles. What Roger Clarke
+calls “dataveillance” is already possible: electronic tolls already
+allow for a measure of tracking.\cite{???} Networked traffic cameras are
+already being used to amass large databases of information about
+(non-networked) cars and their travel patterns by reading passing
+license plates.\cite{???} With sufficient coverage of cities and regions,
+these databases can capture the movements of large segments of the
+population, and therefore include potentially sensitive information
+about people's movements. Despite this, their collection and use
+remains largely unregulated.\cite{???} California police are coming under
+criticism from civil rights groups about their mass collection of
+vehicle position information through police license plate cameras.iv
+Clearly, these types of contested data collection are already
+possible. But networked vehicles, with their arrays of sensors,
+provide more avenues of data collection, and therefore stand to
+increase our present-day problems with mass surveillance and personal
+privacy.
+
+Increasing surveillance by government and law enforcement is not the
+only threat posed by the potential for ever more fully networked
+vehicles. Networked technologies do not have a great security record,
+and there is no reason to believe automated cars will be any
+different, barring greater scrutiny and regulation.\cite{???}
+Networked capabilities within vehicles are being used to
+implement vehicle kill-switches, capable of remotely disabling
+vehicles on the whim of the controlling organization---for example, if
+vehicle rental or loan payments are not completed on time. The
+potential for this is quite troubling: not only could drivers
+potentially find their cars impossible to start at an arbitrary time,
+with serious implications for safety, the existence of these devices
+presents opportunities for hackers to cause nuisance or
+harm.\cite{???-http://boingboing.net/2015/02/24/the-time-a-hacker-remotely-bri.html}
+Existing vulnerabilities in web services and dealership practice
+allowed Ramos-Lopez to hijack 100 cars from a Texas dealership and
+either disable them or set
+the horns
+going.\cite{???-http://www.wired.com/2010/03/hacker-bricks-cars/} The
+potential for this kind of access gets more frightening when one
+considers the potential access a hacker or negligent employee might
+have to an integrated, network-connected vehicle that is capable of
+moving and navigating on its own.
+
+Additionally, Google has envisioned vehicles that can determine their number of
 occupants, and use facial-recognition or other biometric systems to
 identify them. According to one patent,\cite{predictPatent} these vehicles could prevent
 unauthorized persons from putting a child in a car, prevent convicted
@@ -862,7 +906,17 @@ explicit calculus is used and the developers' ethics are only
 implicitly present as a consequence of coding decisions. Ultimately,
 if we want to care about how ethically systems
 operate, we must look at how they are programmed, and what goals that
-programming is intended to serve.
+programming is intended to serve. Only with this focus can we agitate
+against systems that are fully black-boxed---closed-source, protected
+intellectual property potentially defended by anti-circumvention
+laws---and enact an ethics impervious to scrutiny.\footnote{Digital
+  rights management and anti-circumvention laws are abused routinely
+  to lock out consumers and even muzzle security researchers. For a
+  recent example, see \cite{???-higgins}  Parker Higgins, “DRM in Cars Will Drive Consumers
+  Crazy,” Electronic Frontier Foundation, November 13, 2013, accessed
+  October 17, 2014
+  https://www.eff.org/deeplinks/2013/11/drm-cars-will-drive-consumers-crazy
+}
 
 
 
@@ -989,7 +1043,7 @@ significant attention to the fact that ``the lack of generally
 accepted design, implementation, and test practices for
 adaptive/nondeterministic systems will impede the deployment of some
 advanced IA [increasingly autonomous] vehicles and systems'' and that
-``existing V&V [verification and
+``existing V\&V [verification and
   validation] approaches and methods are insufficient for advanced IA
 systems'' for many of the same reasons.\cite[p. 2]{???-NRCAutonomy}
 Among the high-priority research projects they identify as being both
@@ -1168,8 +1222,7 @@ automatically. Complex
 changes to complex systems require significant modeling work,
 experiments, or even trial and error to get right. Old models and
 habits need to be broken---consider for example the rules (about road
-widths, for instance) enshrined
-both in the official urban planning regulations as well as their
+widths, for instance) enshrined in law and the AASHTO ``Green Book'', as well as their
 surrounding culture, rules which are often taken almost as natural
 law\cite{???-kemp}---and new ones built to replace them. 
 
