--- a/main.bib
+++ b/main.bib
@@ -270,7 +270,7 @@
    journal = {Slate},
    month = "October 27",
    year = 2014,
-   note = "http://www.slate.com/articles/technology/technology/2014/10/google_self_driving_car_it_may_never_actually_happen.single.html",
+   note = "http://www.slate.com/articles/technology/technology/2014/10/google\_self\_driving\_car\_it\_may\_never\_actually\_happen.single.html",
 }
 
 @ARTICLE{gomesObstacles,
@@ -648,7 +648,7 @@
    year = 2007,
 }
 
-@INCOLLECTION{patricklin,
+@INCOLLECTION{patrickLin,
    crossref = "robotEthics",
    author = "Patrick Lin",
    title = "{I}ntroduction",
