lots of chapter 1 edits, almost to final state minus proofreading

--- a/chap2.tex
+++ b/chap2.tex
@@ -22,6 +22,10 @@
 %% --so does knowing this reality change what we want to see? (couple of
 %% p)
 
+
+%% Note: SOMEWHERE you should talk about the double-speak; freeing up
+%% the roads for car lovers . . . doesn't make sense
+
 We find ourselves in an era of seemingly continual technological
 change that is strangely most noticeable in the most mundane parts of
 our lives---how we shop, how we communicate, how we find
@@ -199,11 +203,15 @@ Existing vulnerabilities in web services and dealership practice
 allowed Ramos-Lopez to hijack 100 cars from a Texas dealership and
 either disable them or set
 the horns
-going.\cite{???-http://www.wired.com/2010/03/hacker-bricks-cars/} The
+going.\cite{???-http://www.wired.com/2010/03/hacker-bricks-cars/} A
+high-school student at a security camp in July of 2014 was apparently
+able to hack into an automobile with \$15 worth of components, and
+gain access to lights, horns, and even the remote start
+feature.\cite{???-http://www.autoblog.com/2015/02/18/14-year-old-hacker-caught-industry-by-surprise-featured/}
+The
 potential for this kind of access gets more frightening when one
-considers the potential access a hacker or negligent employee might
-have to an integrated, network-connected vehicle that is capable of
-moving and navigating on its own.
+considers the effects an integrated, network-connected vehicle that is capable of
+moving and navigating on its own might have on the reach of a hacker or negligent employee.
 
 Additionally, Google has envisioned vehicles that can determine their number of
 occupants, and use facial-recognition or other biometric systems to
