--- a/chap3.tex
+++ b/chap3.tex
@@ -32,6 +32,26 @@ As a way to INTRODUCE HSC, actually
 
 NRC report on aviation (see e.g. 14-15)
 
+Defense Science board report (DSB)
+NASA, and the Defense Science Board in their report The Role of
+Autonomy in DoD Systems, describe this proliferation of attempts at
+autonomy taxonomies as developing out of Sheridan's work.i The DSB
+identifies that these levels formulations are “often incorrectly
+interpreted as implying that autonomy is simply a delegation of a
+complete task to a computer, that a vehicle operates at a single level
+of autonomy and that these levels are discrete and represent scaffolds
+of increasing difficulty,”ii all interpretations made by both the
+NHTSA and SAE taxonomies and ones I have been attempting to critique.
+The DSB highlights two main negative consequences of the popularity of
+levels of autonomy: that it “deflects focus from the fact that all
+autonomous systems are joint human-machine cognitive systems”1 and
+that it “reinforces fears about unbounded autonomy” while obscuring
+the fact that no systems are fully autonomous.iii Humans are always
+involved somewhere along the line, in their programming, production,
+and use, though it makes sense that the military, focused as it is on
+human command hierarchies, would find it especially important to make
+this apparent. 
+
 \subsection{Lessons from Autonomy Research}
 
 Apollo/Mars rover
