--- a/intro.tex
+++ b/intro.tex
@@ -36,6 +36,11 @@ instructions to individual cars, and a 1/40th scale demonstration
 system was built for the 1960 Highway Research Board meeting in
 Washington D.C.vi
 
+%%THIS STUFF DUPLICATES CH1; sort it out!
+
+
+%% DO include the CES depictions; and contrast with the 1950s ad, at
+%% least in a footnote!
 
 2) deal in general with some of the popular portrayals of the
 technology: the nature of the self-driving car as it will appear in
