--- a/main.bib
+++ b/main.bib
@@ -42,6 +42,15 @@
    note = "http://www.technologyreview.com/news/527756/lazy-humans-shaped-googles-new-autonomous-car/",
 }
 
+@ARTICLE{CBSPetersen,
+   author = {Barry Petersen},
+   title = "{J}ust around the bend: {A} brave new driverless world",
+   journal = {CBS News},
+   month = "January 19",
+   year = 2014,
+   note = "http://www.cbsnews.com/news/just-around-the-bend-a-brave-new-driverless-world/",
+}
+
 @ARTICLE{robotworx,
    key = "Robot Vehicles",
    author = "",
@@ -79,6 +88,15 @@
    number = 6,
    month = "Nov/Dec",
    year = 1953,
+}
+
+@ARTICLE{hutchinsCockpit,
+   author = "Edwin Hutchins",
+   title = "{H}ow a {C}ockpit {R}emembers {I}ts {S}peeds",
+   journal = {Cognitive Science},
+   volume = 19,
+   year = 1995,
+   pages = "265--288",
 }
 
 @UNPUBLISHED{roesmithYankee,
@@ -126,6 +144,14 @@
    publisher = "MIT Press",
    address = "Cambridge, MA",
    year = "2013",
+}
+
+@BOOK{nyeElectrifying,
+   author = "David E. Nye",
+   title = "{E}lectrifying {A}merica: {S}ocial {M}eanings of a {N}ew {T}echnology, 1880-1940",
+   publisher = "MIT Press",
+   address = "Cambridge, MA",
+   year = "1990",
 }
 
 @BOOK{nobleForces,
@@ -400,6 +426,15 @@
    note = "http://hcri.brown.edu/2013/08/25/the-google-driverless-car-a-cool-thing-that-matters/",
 }
 
+@ARTICLE{melansonMinority,
+   author = "Donald Melanson",
+   title = "{M}inority {R}eport at 10: a look at technology from today to 2054",
+   journal =  "Engadget",
+   month = "June 21",
+   year = "2012",
+   note = "http://www.engadget.com/2012/06/21/minority-report-at-10-a-look-at-technology-from-today-to-2054/",
+}
+
 @ARTICLE{JetsonsAge,
    author = "Julianne Pepitone",
    title = "{J}etsons {A}ge {B}eckons, {B}ut {O}pinion {S}plit on {D}riverless {C}ar, {D}rones",
@@ -560,6 +595,63 @@
    pages = "485--502",
    year = "1985",
    note = "Cited in SAE J3016.",
+}
+
+@ARTICLE{bleecker,
+   author = "Julian Bleecker",
+   title = "{D}esign {F}iction: {A} {S}hort {E}ssay on {D}esign, {S}cience, {F}act and {F}iction",
+   journal = "{N}ear {F}uture {L}aboratory",
+   month = "March 17",
+   year = "2009",
+   note = "http://blog.nearfuturelaboratory.com/2009/03/17/design-fiction-a-short-essay-on-design-science-fact-and-fiction/",
+}
+
+@ARTICLE{kirbyFuture,
+   author = "David Kirby",
+   title = "{T}he {F}uture is {N}ow: {D}iegetic {P}rototypes and the {R}ole of {P}opular {F}ilms in {G}enerating {R}eal-world {T}echnological {D}evelopment",
+   journal = "{S}ocial {S}tudies of {S}cience",
+   month = "February",
+   year = "2010",
+   volume = "40",
+   number = "1",
+   pages = "41--70",
+}
+
+@ARTICLE{parasuramanW,
+   author = "Raja Parasuraman and Christopher D. Wickens",
+   title = "{H}umans: {S}till {V}ital {A}fter {A}ll {T}hese {Y}ears of {A}utomation",
+   journal = "{H}uman {F}actors",
+   month = "June",
+   year = "2008",
+   volume = "50",
+   number = "3",
+   pages = "511--520",
+}
+
+@ARTICLE{PSWickens,
+   author = "R. Parasuraman and T. B. Sheridan and C. D. Wickens",
+   title = "{A} {M}odel for {T}ypes and {L}evels of {H}uman {I}nteraction with {A}utomation",
+   journal = "{IEEE} {T}ransactions on {S}ystems, {M}an and {C}ybernetics",
+   year = "2000",
+   volume = "A 30",
+   number = "3",
+   pages = "286--297",
+}
+
+@ARTICLE{ALFUS,
+   author = "Hui-Min Huang",
+   title = "{A}utonomy {L}evels for {U}nmanned {S}ystems ({ALFUS}) {F}ramework {V}olume II: {F}ramework {M}odels {V}ersion 1.0",
+   journal = "{NIST} {S}pecial {P}ublication",
+   year = "2007",
+   volume = "1011-II-1.0",
+   note = "http://www.nist.gov/customcf/get_pdf.cfm?pub_id=823618",
+}
+
+@ARTICLE{SMART,
+   author = "Ryan W. Proud and Jeremy J. Hart and Richard B. Mrozinski",
+   title = "{M}ethods for {D}etermining the {L}evel of {A}utonomy to {D}esign into a {H}uman {S}paceflight {V}ehicle: {A} {F}unction {S}pecific {A}pproach",
+   journal = "{NASA} Website",
+   note = "http://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/20100017272.pdf",
 }
 
 
