small edit to ch1 and bib to allow things to print

--- a/main.bib
+++ b/main.bib
@@ -644,7 +644,7 @@
    journal = "{NIST} {S}pecial {P}ublication",
    year = "2007",
    volume = "1011-II-1.0",
-   note = "http://www.nist.gov/customcf/get_pdf.cfm?pub_id=823618",
+   note = "http://www.nist.gov/customcf/get\_pdf.cfm?pub\_id=823618",
 }
 
 @ARTICLE{SMART,
