conclusion added to chap2

--- a/chap2.tex
+++ b/chap2.tex
@@ -37,7 +37,16 @@ information, and its collection and use. The stakes of autonomous
 vehicles are thereby deeply intertwined with the
 stakes of other networked information technologies. And it is in these
 current models that we should start the search for why competing
-narratives of self-driving car development matter.
+narratives of self-driving car development matter. To illustrate these
+issues, I will
+take as assumed the general form of the autonomous vehicle as present
+in Google's development work: though numerous other models exist, they
+are the subject of another section. Here, we seek to take this design
+to its logical conclusion and interrogate the numerous social,
+cultural, and informational stakes implicit in it.
+
+
+\subsection{Data Gathering and Monitoring} 
 
  In May of 2014, the European
 Union's Court of Justice 
@@ -77,9 +86,6 @@ disgruntled employees or thieves. This
 is particularly important as a precursor of things to
 come in the autonomous vehicle space, as such vehicles will allow
 large amounts of data to be collected and shared with other entities. 
-
-
-\subsection{Data Gathering and Monitoring} 
 
 Clearly, new technologies will require new information, new types of
 sensing, in order to operate; but it may be that not all the
@@ -168,7 +174,7 @@ information landscape, to see such information sold to third-party advertisers.
 
 These sorts of security and privacy issues are not unique to
 autonomous vehicles, nor even to networked vehicles. What Roger Clarke
-calls “dataveillance” is already possible: electronic tolls already
+calls ``dataveillance'' is already possible: electronic tolls already
 allow for a measure of tracking.\cite{???} Networked traffic cameras are
 already being used to amass large databases of information about
 (non-networked) cars and their travel patterns by reading passing
@@ -1272,5 +1278,34 @@ of what driverless cars would mean for people who have children, he
 replied:  ``they don't think about it.'' While certainly not shared by
 all developers in this space, it is not a vision we can afford.
 
-
+This chapter has investigated six different perspectives on the
+social, cultural, and informational contexts of the autonomous
+vehicle, including:  the technologies involved in its operation, the
+data it collects, the statistics with which it is mobilized, the
+ethics and epistemologies with which it is designed, and the civic
+ends to which it might be mobilized. While in chapter \ref{chap:1} we
+illuminated the historical background behind the dominant narrative of
+the self-driving vehicle, here we sought to illuminate the
+consequences of this vision. If we accept this narrative, these design
+fictions, for the automotive future, what comes along for the ride? We
+have seen that the automated vehicle, so envisioned, exists at the
+nexus of a number of deep, important questions about our relationships
+to technology: what level of privacy is appropriate? what counts as machine
+knowledge? how do we design machines that can be genuinely ethical,
+and do we need to? We have also seen that these vehicles present a
+number of thorny problems not often recognized: what level of
+representational work is required to make them function? how do we
+predict the relative safeties of devices that do not exist? can we
+achieve better urban design simply by adding autonomy to vehicles?
+All of these questions are united by being largely unanswerable---and
+the problems, unsolvable---by a focus only on the device itself,
+narrowly defined. Instead, these are system-level problems, question
+that must be asked of large networks of human and machine actors with
+subtle and shifting interrelationships. Some are likely to be issues
+for any approach to vehicle automation; however, alternative models of
+automation present the possibility to soften some of the more
+troubling questions of machine capabilities. Let us turn to a fresh look at
+vehicle automation, drawing from sources outside the dominant
+narrative, and explore what effect an alternative model has on the
+stakes of automotive automation.
 
